first 3 exercises complete

--- a/JSDemo.html
+++ b/JSDemo.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
+    <h1>Exercise 1:</h1>
+    <p id="ex1"></p>
+
+    <h1>Exercise 2:</h1>
+    <p id="ex2"></p>
+
+    <h1>Exercise 3:</h1>
+    <p id="ex3"></p>
+
+    <h1>Exercise 4:</h1>
+    <p id="ex4"></p>
     
-    
+    <h1>Exercise 5:</h1>
+    <p id="ex5"></p>
+
 </body>
 </html>
